finish small algorithm Ex

--- a/Intermediate Algorithm Screwing/BooWho/BooWho.html
+++ b/Intermediate Algorithm Screwing/BooWho/BooWho.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <script src="Javascript.js"></script>
   <body>
     <h> missing Letters</h>
       <p>Boo who </p>
@@ -20,20 +21,7 @@
     there are 6 types - String Number Boolean, Null Symbol Undefined
     value will be logically 0 if first value is omitted - make it false basically
     - other values will be true
+<p>
 
 
-  <script>
-  //check if the parameter is a boolean value
-
-function booWho(bool) {
-  //type of operator will return a string indicating the type of the unevaluated operand
-  // What is the new fad diet for ghost developers? The Boolean.
-
-//check if it is a primitive boolean value
-  if(typeof booWho ==='boolean')
-  //if not return null
-}
-
-booWho(null);
-  </script>
 <body>
